# python-svg

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
svg/: __init__.py  example.py  link.py  main.py  server.py  shapes.py  style.py
tests/: test_rectangle.py
